plugins {
    id 'com.android.application'
}

android {
    namespace 'com.mrdalse2.sbsplusproxy'
    compileSdk 36

    defaultConfig {
        applicationId 'com.mrdalse2.sbsplusproxy'
        minSdk 26
        targetSdk 35
        versionCode 20
        versionName '4.2.0'
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation 'org.jmdns:jmdns:3.6.3'
}
